[package]
name = "vulnode"
version = "0.1.0"
authors = ["Maksim Krzhemenevskiy <regikul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ei-sys = {git = "https://github.com/Regikul/ei-sys.git", branch = "otp_updates"}
in_addr = "1.0"
vulkano = "0.16.0"
vulkano-shaders = "0.14.0"
png = "0.15.2"
